Compiler/src/main/java/Testing/Tests/LexicalTests/failing/InvalidComment.ru

/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 4 | COLUMNA 35 | ERROR EN LA DEFINICION DEL COMENTARIO /? simbolo invalido en comentario °
/? simbolo invalido en comentario °